# Todo-app-backend

./: .gitignore
src/: Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
src/core/api/: api_routes.py
src/core/api/tasks/: routes.py  schema.py  services.py
src/core/api/user/: routes.py  schema.py  services.py
src/core/db/: db_config.py
src/core/db/models/: task_model.py  user_models.py
src/core/utils/: common_func.py  constants.py  log_config.py
